[package]
version = "0.1.0"
name = "fibonacci-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = "2.0.0"
fibonacci-lib = { path = "../lib" }

ark-bn254 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
ark-serialize =  { version = "^0.4.0", default-features = false  }

# merlin = "3.0.0"
merlin = { git = "https://github.com/zk-passport/merlin", branch = "main" }

# libspartan = { path = "../../../spartan" }
libspartan = { git = "https://github.com/zk-passport/spartan", branch = "sp1-bn254" }