[package]
version = "0.1.0"
name = "fibonacci-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = "2.0.0"
fibonacci-lib = { path = "../lib" }

# merlin = "3.0.0"
merlin = { git = "https://github.com/zk-passport/merlin", branch = "main" }

# spartan = { path = "../../../spartan" }
spartan = { git = "https://github.com/zk-passport/Spartan", branch = "curve25519" }
bincode = { version = "1.3.3", default-features = false }
